--- a/style/style.css
+++ b/style/style.css
@@ -29,4 +29,16 @@
     position: absolute;
     top: 256px;
     width: 20px;
+    background-color: black;
+  }
+
+  .cloudLayer {
+    height: 256px;
+    left: 50%;
+    margin-left: -128px;
+    margin-top: -128px;
+    position: absolute;
+    top: 50%;
+    width: 256px;
+    background-color: rgba(0,255,0, 0.2);
   }
