--- a/style/style.css
+++ b/style/style.css
@@ -1,44 +1,83 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0
+}
+body {
+  color: #eee;
+  text-shadow: 0 -1px 0 rgba( 0, 0, 0, .6 );
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+  line-height: 16px;
+  overflow: hidden;
+}
 #viewport {
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    perspective: 400;
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: rgba(38, 114, 228, 0.8);
-  }
-  
-  #world {
-    height: 512px;
-    left: 50%;
-    margin-left: -256px;
-    margin-top: -256px;
-    position: absolute;
-    top: 50%;
-    transform-style: preserve-3d;
-    width: 512px;
-    background-color: rgba(255,0,0,0.2);
-  }
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  background-image: linear-gradient(bottom, rgb(69,132,180) 28%, rgb(31,71,120) 64%);
+  background-image: -o-linear-gradient(bottom, rgb(69,132,180) 28%, rgb(31,71,120) 64%);
+  background-image: -moz-linear-gradient(bottom, rgb(69,132,180) 28%, rgb(31,71,120) 64%);
+  background-image: -webkit-linear-gradient(bottom, rgb(69,132,180) 28%, rgb(31,71,120) 64%);
+  background-image: -ms-linear-gradient(bottom, rgb(69,132,180) 28%, rgb(31,71,120) 64%);
 
-  .cloudBase {
-    height: 20px;
-    left: 256px;
-    margin-left: -10px;
-    margin-top: -10px;
-    position: absolute;
-    top: 256px;
-    width: 20px;
-    background-color: black;
-  }
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.28, rgb(69,132,180)),
+    color-stop(0.64, rgb(31,71,120))
+  );
+}
 
-  .cloudLayer {
-    height: 256px;
-    left: 50%;
-    margin-left: -128px;
-    margin-top: -128px;
-    position: absolute;
-    top: 50%;
-    width: 256px;
-    background-color: rgba(0,255,0, 0.2);
-  }
+#world {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -256px;
+  margin-top: -256px;
+  height: 512px;
+  width: 512px;
+  background-color: rgba( 255, 0, 0, .2 );
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+}
+
+#world div {
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+}
+
+.cloudBase {
+  background-color: rgba( 255, 0, 255, .5 );
+  position: absolute;
+  left: 256px;
+  top: 256px;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  margin-top: -10px;
+}
+
+.cloudLayer {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 256px;
+  height: 256px;
+  margin-left: -128px;
+  margin-top: -128px;
+  background-image: url("../images/cloud.png");
+  background-color: rgba( 0, 255, 255, .1 );
+  -webkit-transition: opacity .5s ease-out;
+  -moz-transition: opacity .5s ease-out;
+  -o-transition: opacity .5s ease-out;
+}
